--- a/test6/UI/teacher.html
+++ b/test6/UI/teacher.html
@@ -335,7 +335,7 @@
         <img id="u60_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
         <div id="u61" class="text">
-          <p><span>需要选择具体的课程后才能查询出对应课程下的学生信息列表</span></p>
+          <p><span>需要选择具体的课程后才能查询出对应课程下的学生信息列表</span><span>:如下所示</span></p>
         </div>
       </div>
     </div>
