--- a/test6/UI/student.html
+++ b/test6/UI/student.html
@@ -246,7 +246,7 @@
         <img id="u39_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
         <div id="u40" class="text">
-          <p><span>需要具体确定课程的具体时间和课程名才可以查询</span></p>
+          <p><span>需要具体确定课程的具体时间和课程名才可以查询</span><span>:如下所示</span></p>
         </div>
       </div>
     </div>
